@@ -29,6 +29,7 @@ Changes since 5.0.1
 * FIX incorrect average value in final bin of "smooth cnorm" calculation
 * FIX handle log-scale y values when calculating monotonic cubic spline fit
 * FIX "set clip points" was non-functional in version 5.0
+* FIX regression in 5.0.1 that left extraneous '@' in title columnhead(N)
 
 Changes in 5.0.1
 ================
